--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     
     <main class="container">
         <p>cigany cigany</p>
+        <h1>nigger fasz</h1>
         <section id="home">
             <h2>Welcome to the Rusty Rack</h2>
             <p>Deep within the Ironwood Forest, where ancient pines scrape the storm clouds and mist clings to the ground like ghostly fingers, stands the Rusty Rack—a tavern older than memory itself. Its weathered wooden sign creaks in the wind, bearing the faded image of a stag with antlers twisted into impossible angles.</p>
